[gd_scene load_steps=2 format=3 uid="uid://dwnho3m4hcmbh"]

[ext_resource type="Script" path="res://Scenes/Main/World.gd" id="1_cpycn"]

[node name="World" type="Node2D"]
script = ExtResource("1_cpycn")

[node name="NetworkInfo" type="VBoxContainer" parent="."]
offset_left = 517.0
offset_top = 4.0
offset_right = 572.0
offset_bottom = 82.0

[node name="NetworkSideDisplay" type="Label" parent="NetworkInfo"]
layout_mode = 2

[node name="UniquePeerID" type="Label" parent="NetworkInfo"]
layout_mode = 2

[node name="Lag" type="HBoxContainer" parent="."]
visible = false
offset_left = 106.0
offset_top = 13.0
offset_right = 209.0
offset_bottom = 44.0

[node name="Label" type="Label" parent="Lag"]
layout_mode = 2
text = "Lag:"

[node name="LineEdit" type="LineEdit" parent="Lag"]
layout_mode = 2
text = "0.250"

[connection signal="text_submitted" from="Lag/LineEdit" to="." method="_on_line_edit_text_submitted"]
